<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/neighbours_details"
    android:background="@color/background"
    >

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/name_in_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="174dp"
        android:textColor="@color/white"
        android:textSize="@dimen/fat_name"
        app:layout_constraintBottom_toBottomOf="@+id/image_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/FAB_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="341dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/gray_star"
        app:layout_constraintBottom_toBottomOf="@+id/image_details"
        app:layout_constraintEnd_toEndOf="@+id/card_view_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_details" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view_two"
        app:layout_constraintEnd_toEndOf="@+id/card_view_two"
        app:layout_constraintStart_toStartOf="@+id/card_view_two"
        app:layout_constraintTop_toBottomOf="@+id/image_details"
        app:layout_constraintVertical_bias="0.16000003">

        <TextView
            android:id="@+id/name_in_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/localisation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/localisation_img"
            android:drawablePadding="5dp"
            />


        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:drawableStart="@drawable/phone_img"
            android:drawablePadding="5dp"/>



        <TextView
            android:id="@+id/web_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:drawableStart="@drawable/ic_connection"
            android:drawablePadding="5dp"
            android:paddingBottom="5dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_one"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_one">

        <TextView
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/about_me"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_me_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:padding="15dp" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
</ScrollView>